-
Bug
-
Resolution: Done
-
P1: Critical
-
4.7.1
-
None
-
N8 environment
-
54313b3ba81c276cf06c40c2420b1ff1f30e64c3
Precondition(s):
1. 'BrDemo' is installed in device. (Only Portrait mode is supported in BrDemo.) "Red" background color is set for all application palette.
2. Device is in applications shell Landscape mode
Test step(s):
1. Launch 'BrDemo' in main view.
2. Check BrDemo main view.
Expected result(s):
R2: BrDemo main view is displayed correctly.
background color is "red". Please see correct_view.png file
Actual result(s):
R2: BrDemo main view is messed.Background color is black. Please see incorrect_view.png file
Pls. refer to the shot and correct view attached.
Demo application is attached.